# cadiz12

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
configs/basic/: completa.json  partida_basica.json
examples/: generar_config.rs  generar_narrativa.rs  simular.rs  terminal_game.rs  visualizar_evento.rs
scripts/: simular_partida.sh
src/: lib.rs
src/config/: espacios.rs  eventos.rs  facciones.rs  medidores.rs  mod.rs  partida.rs  personajes.rs  textos.rs  validacion.rs  validacion_historica.rs
src/engine/: dtos.rs  m1_estado_mundo.rs  m2_estado_protagonista.rs  m3_medidores.rs  m4_generador_eventos.rs  m5_bucle_jornada.rs  m6_memoria.rs  m7_api.rs  mod.rs
src/sdk/: generador.rs  generador_dinamico.rs  generador_narrativas.rs  mod.rs  recursos_visuales.rs
src/sdk/domain/: ids.rs  mod.rs  types.rs
src/ui/: gtk.rs  mod.rs  slint.rs  terminal.rs
tests/: test_config.rs  test_integracion.rs  test_motor.rs
